--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>GIT demo</h1>
     <p>First paragraph</p>
     <p>Second paragraph</p>
+    <img src="./img/novisad.jpg" alt="Novi Sad center panorama" width="380px">
     
 </body>
 </html>
