--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>First paragraph</p>
     <p>Second paragraph</p>
     <img src="./img/novisad.jpg" alt="Novi Sad center panorama" width="380px">
+    <p>New branch - version01</p>
     
 </body>
 </html>
