Added: Contact Page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
     <h1>GIT demo</h1>
     <p>First paragraph</p>
-    <p>Second paragraph</p>
     <img src="./img/novisad.jpg" alt="Novi Sad center panorama" width="380px">
     <p>New branch - version01</p>
+    <div>
+        <h3>Added: div</h3>
+    </div>
     
 </body>
 </html>
